--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "tt-backend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts",
+    "start:dev": "tsnd index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
