--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "uuid": "^9.0.0"
   },
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@types/uuid": "^9.0.0",
     "ts-jest": "^29.0.5",
